# Drift-Script-Manager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/templates/default/: main.luau
src/: drift_project.rs  fonts.rs  gui.rs  imgui_setup.rs  main.rs  util.rs  window.rs
src/gui/: build_project.rs  create_project.rs  fonts.rs  mod.rs  project_info.rs  save_project.rs  setup.rs  state.rs  ui.rs
src/gui/screens/: build_project.rs  create_project.rs  custom_templates.rs  edit_templates.rs  main_menu.rs  mod.rs  new_template.rs  project_info.rs  save_project.rs
src/managers/: data.rs  git.rs  mod.rs  template.rs
src/project/: drift_project.rs  mod.rs  package_info.rs
src/utils/: dialogs.rs  error_helper.rs  icons.rs  mod.rs  ui_helpers.rs
